browser service worker test v1

--- a/springmvc/web/html/problem.html
+++ b/springmvc/web/html/problem.html
@@ -102,8 +102,8 @@
                     {
                         url: "../js/jquery-3.2.1.min.js",
                         success: function (result) {
-                            $("#div1").html(result);
-                            return
+                            $("#div1").text(result);
+                            return;
 //                            debugger;
                         }
                     }
